Changes to the login

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,12 +7,12 @@
 // Bootstrap
 // @import '../../node_modules/bootstrap/scss/bootstrap';
 
-@import "~tailwindcss/base.css";
-@import "~tailwindcss/tailwind.css";
+//@import "~tailwindcss/base";
+//
+//@import "~tailwindcss/components";
+//
+//@import "~tailwindcss/utilities";
 
-@import "~tailwindcss/components.css";
-
-@import "~tailwindcss/utilities.css";
 
 
 body {
