Changed the whole panel component color and structure

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,10 +14,10 @@
 //@import "~tailwindcss/utilities";
 
 
-
-body {
-    background: #37474F;
-}
+//
+//body {
+//    background: ;
+//}
 
 .navbar-laravel {
     background-color: #fff;
