--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap');
 
-body {
+html {
   font-family: 'Muli', sans-serif;
 }
 
