--- a/tailwind.css
+++ b/tailwind.css
@@ -9,7 +9,13 @@ html {
 }
 
 .serverbooting {
-    animation: rotation 2s infinite linear;
+    animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
 
 @tailwind base;
