--- a/tailwind.css
+++ b/tailwind.css
@@ -9,12 +9,12 @@ html {
 }
 
 .serverbooting {
-    animation: blinker 2s linear infinite;
+    animation: blinker 0.5s linear infinite;
 }
 
 @keyframes blinker {
     50% {
-        opacity: 0;
+        background-color: #c53030;
     }
 }
 
